--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -42,14 +42,14 @@ header {
   height: 85vh;
   position: relative; }
   header .responsive-navbar {
+    transition-duration: 0.5s;
     display: none;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     padding: 1rem;
     position: fixed;
     width: 100%;
-    z-index: 4;
-    transition-duration: 0.5s; }
+    z-index: 4; }
     header .responsive-navbar .hamburger-container {
       display: -ms-flexbox;
       display: flex;
@@ -159,7 +159,7 @@ header {
         padding: 0; }
         header .navbar-container nav ul .hamburger-li {
           line-height: 3.5rem;
-          margin-right: 60px; }
+          margin-right: 8%; }
           header .navbar-container nav ul .hamburger-li a {
             color: white;
             font-size: 1rem;
@@ -259,7 +259,7 @@ header {
   .sect-projects .resp-project-container {
     padding-top: 3rem;
     padding-bottom: 3rem;
-    background-image: url("../images/office.jpeg");
+    background-image: url("../images/dev_office1.jpg");
     position: relative;
     display: none;
     background-position: center;
@@ -337,7 +337,7 @@ header {
             flex-direction: column; }
         .sect-projects .project-container .left-side .list-left-side .cell {
           margin-bottom: 5rem;
-          padding: 2rem;
+          padding: 2rem 1.5rem 2rem 2rem;
           position: relative;
           transition-duration: .5s; }
           .sect-projects .project-container .left-side .list-left-side .cell .cell-paragraph {
@@ -360,7 +360,7 @@ header {
             opacity: 1; }
           .sect-projects .project-container .left-side .list-left-side .cell .project-min {
             position: absolute;
-            right: -65vw;
+            right: -63vw;
             top: calc(50% - 9rem); }
             .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell {
               background-color: #1f3786;
@@ -368,7 +368,7 @@ header {
               height: 18rem;
               padding: 1rem;
               transition-duration: 0.5s;
-              width: 60vw; }
+              width: 58vw; }
               .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell [class*="rea-"] {
                 background-position: center;
                 background-size: cover;
@@ -626,7 +626,9 @@ header {
     .sect-projects .project-container {
       display: none; }
     .sect-projects .resp-project-container {
-      display: block; }
+      display: block;
+      padding-top: 1.7rem;
+      padding-bottom: 1.7rem; }
       .sect-projects .resp-project-container .resp-project-min .resp-photo-cell {
         height: 6rem;
         padding: 0.5rem; }
@@ -691,7 +693,13 @@ header {
   .sect-technologies .technologies-background-area {
     padding: 2rem; }
   .sect-technologies .line {
-    margin: 1.3rem 0 1rem 0; }
+    margin: 1.3rem 0 1rem 0;
+    height: 0.4rem; }
+    .sect-technologies .line .square-arrow {
+      width: 0.9rem;
+      height: 0.9rem; }
+    .sect-technologies .line::before {
+      height: 0.4rem; }
   .sect-technologies .media-padding {
     padding: 0; }
   .sect-technologies [class*="ech-"] {
@@ -883,104 +891,30 @@ header {
       margin-bottom: 3rem; }
     .sect-projects .header-used-technologies {
       margin: 0 0 0.5rem 0; }
-    .sect-projects .project-container {
-      display: -ms-flexbox;
-      display: flex;
-      margin: 0 auto 0 0;
-      background-image: url("../images/office.jpeg");
-      background-position: center;
-      background-size: cover;
-      background-attachment: fixed; }
-      .sect-projects .project-container .left-side {
-        background-color: #1f3786;
-        box-shadow: 0px 0px 10px 0px #1f3786;
-        color: white;
+    .sect-projects .project-container .left-side {
+      padding: 5rem 0 5rem 2rem; }
+      .sect-projects .project-container .left-side .list-left-side {
         display: -ms-flexbox;
         display: flex;
-        padding: 5rem 0 5rem 2rem;
-        width: 35%; }
-        .sect-projects .project-container .left-side .list-left-side {
-          display: -ms-flexbox;
-          display: flex;
-          -ms-flex-direction: column;
-              flex-direction: column; }
-          .sect-projects .project-container .left-side .list-left-side .cell {
-            margin-bottom: 5rem;
-            padding: 1.3rem;
-            position: relative;
-            transition-duration: .5s; }
-            .sect-projects .project-container .left-side .list-left-side .cell .cell-paragraph {
-              min-height: 60px; }
-            .sect-projects .project-container .left-side .list-left-side .cell .cell-icon {
-              margin-right: 0.3em; }
-            .sect-projects .project-container .left-side .list-left-side .cell .project-min {
-              position: absolute;
-              right: -63vw;
-              top: calc(50% - 8rem); }
-              .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell {
-                background-color: #1f3786;
-                box-shadow: 0px 0px 10px 0px #1f3786;
-                height: 16rem;
-                padding: 1rem;
-                transition-duration: 0.5s;
-                width: 58vw; }
-                .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell [class*="rea-"] {
-                  background-position: center;
-                  background-size: cover;
-                  height: 100%;
-                  position: relative;
-                  width: 100%; }
-                .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .area-photo-1 {
-                  background-image: url("../images/design_lab.jpg"); }
-                .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .area-photo-2 {
-                  background-image: url("../images/picture_perfect.jpg"); }
-                .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .area-photo-3 {
-                  background-image: url("../images/your_life.jpg"); }
-                .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .photo-layer {
-                  background-color: rgba(32, 51, 114, 0.692);
-                  bottom: 0;
-                  left: 0;
-                  opacity: 0;
-                  position: absolute;
-                  right: 0;
-                  top: 0;
-                  transition-duration: 0.5s; }
-                .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .layer-icon {
-                  color: #f2f2ff;
-                  font-size: 4rem;
-                  opacity: 0;
-                  position: absolute;
-                  top: calc(50% - 2rem);
-                  transition-duration: 0.5s; }
-                .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell [class*="code"] {
-                  left: 17vw; }
-                .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell [class*="sear"] {
-                  right: 17vw; }
-            .sect-projects .project-container .left-side .list-left-side .cell .arrow {
-              background-color: #1f3786;
-              box-shadow: 0px 0px 10px 0px #1f3786;
-              height: 2rem;
-              position: absolute;
-              right: 0;
-              top: calc(50% - 1rem);
-              transform: matrix(0.71, 0.71, -0.71, 0.71, 16, 0);
-              transition-duration: .5s;
-              width: 2rem; }
-            .sect-projects .project-container .left-side .list-left-side .cell .header-of-cell-title {
-              border: 0;
-              margin: 0;
-              position: relative; }
-            .sect-projects .project-container .left-side .list-left-side .cell .right-arrow {
-              font-size: 1.5rem;
-              left: -1rem;
-              position: absolute; }
-            .sect-projects .project-container .left-side .list-left-side .cell .tech-used {
-              display: -ms-flexbox;
-              display: flex; }
-              .sect-projects .project-container .left-side .list-left-side .cell .tech-used .cell-icon {
-                width: 2.5rem; }
-      .sect-projects .project-container .right-side {
-        background-color: rgba(255, 255, 255, 0.521);
-        width: 100%; } }
+        -ms-flex-direction: column;
+            flex-direction: column; }
+        .sect-projects .project-container .left-side .list-left-side .cell {
+          padding: 1.3rem; }
+          .sect-projects .project-container .left-side .list-left-side .cell .cell-paragraph {
+            min-height: 60px; }
+          .sect-projects .project-container .left-side .list-left-side .cell .cell-icon {
+            margin-right: 0.3em; }
+          .sect-projects .project-container .left-side .list-left-side .cell .project-min {
+            right: -63vw;
+            top: calc(50% - 8rem); }
+            .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell {
+              height: 16rem;
+              width: 58vw; }
+              .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell [class*="code"] {
+                left: 17vw; }
+              .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell [class*="sear"] {
+                right: 17vw; }
+          .sect-projects .project-container .left-side .list-left-side .cell .right-arrow {
+            left: -1rem; } }
 
 /*# sourceMappingURL=style.prefixed.css.map */
