--- a/css/style.css
+++ b/css/style.css
@@ -143,10 +143,10 @@ header {
         list-style-type: none;
         margin: 0;
         padding: 0; }
-        header .navbar-container nav ul .hamburger-li {
+        header .navbar-container nav ul .navbar-li {
           line-height: 3.5rem;
           margin-right: 8%; }
-          header .navbar-container nav ul .hamburger-li a {
+          header .navbar-container nav ul .navbar-li a {
             color: white;
             font-size: 1rem;
             text-decoration: none; }
@@ -172,7 +172,7 @@ header {
     line-height: 2; }
     .sect-about-me .paragraph .photo-of-author {
       float: left;
-      margin-right: 1rem;
+      margin-right: 1.4rem;
       max-width: 100%;
       height: auto; }
 
@@ -515,6 +515,9 @@ header {
 
 /* ---------------- Media Queries ----------------- */
 @media (max-width: 319.99px) {
+  .container {
+    padding: 0 1.25rem; }
+
   #btnCircleUp-js i {
     font-size: 2rem; }
 
@@ -528,8 +531,6 @@ header {
   .sect-about-me {
     padding: 2rem 0 4rem 0;
     position: relative; }
-    .sect-about-me .paragraph {
-      text-align: center; }
     .sect-about-me .title-about-me {
       background-color: #101f55;
       color: white;
@@ -540,6 +541,9 @@ header {
       top: -2.5rem;
       padding: 1rem 20px;
       font-size: 1.5rem; }
+    .sect-about-me .paragraph .photo-of-author {
+      margin-right: 0;
+      margin-bottom: 1.4rem; }
 
   .sect-technologies {
     padding: 2rem 0 4rem 0;
@@ -628,6 +632,9 @@ header {
       #footer .flex-area .my-name {
         text-align: center; } }
 @media (min-width: 320px) and (max-width: 575.98px) {
+  .container {
+    padding: 0 1.25rem; }
+
   #btnCircleUp-js i {
     font-size: 3rem; }
 
@@ -645,6 +652,8 @@ header {
     position: absolute;
     top: -3.5rem;
     padding: 1.5rem 30px; }
+  .sect-about-me .paragraph .photo-of-author {
+    margin-bottom: 1.4rem; }
 
   .sect-technologies .title-technologies {
     background-color: #101f55;
@@ -743,6 +752,8 @@ header {
     position: absolute;
     top: -3.5rem;
     padding: 1.5rem 30px; }
+  .sect-about-me .paragraph .photo-of-author {
+    margin-bottom: 1.4rem; }
 
   .sect-technologies .title-technologies {
     background-color: #101f55;
@@ -812,6 +823,8 @@ header {
     position: absolute;
     top: -3.5rem;
     padding: 1.5rem 30px; }
+  .sect-about-me .paragraph .photo-of-author {
+    margin-bottom: 1.4rem; }
 
   .sect-projects {
     padding: 4rem 0 8rem 0;
