--- a/css/style.css
+++ b/css/style.css
@@ -489,7 +489,14 @@ header {
         margin-bottom: 0.5rem;
         padding: 0.5rem;
         width: 100%;
-        color: white; }
+        color: white;
+        transition-duration: 0.5s; }
+        #footer .flex-area .footer-form form .form-elem:focus {
+          border: 3px solid #101f55;
+          box-shadow: 0 0 0.2px #101f55; }
+        #footer .flex-area .footer-form form .form-elem:hover {
+          border: 3px solid #101f55;
+          box-shadow: 0 0 0.2px #101f55; }
       #footer .flex-area .footer-form form input::placeholder,
       #footer .flex-area .footer-form form textarea::placeholder {
         color: white;
