--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -305,6 +305,8 @@ header {
       .sect-projects .resp-project-container .resp-project-min .resp-photo-cell .area-photo-4 {
         background-image: url("../images/bootstrap_project.jpg");
         background-position: top; }
+      .sect-projects .resp-project-container .resp-project-min .resp-photo-cell .area-photo-5 {
+        background-image: url("../images/rock-paper-scissors.png"); }
       .sect-projects .resp-project-container .resp-project-min .resp-photo-cell .resp-photo-layer {
         background-color: rgba(32, 51, 114, 0.692);
         bottom: 0;
@@ -329,7 +331,7 @@ header {
     display: -ms-flexbox;
     display: flex;
     margin: 0 auto 0 0;
-    background-image: url("../images/dev_office1.jpg");
+    background-image: url("../images/dev_office1_opt.jpg");
     background-position: center;
     background-size: cover;
     background-attachment: fixed; }
@@ -395,6 +397,8 @@ header {
               .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .area-photo-4 {
                 background-image: url("../images/bootstrap_project.jpg");
                 background-position: top; }
+              .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .area-photo-5 {
+                background-image: url("../images/rock-paper-scissors.png"); }
               .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .photo-layer {
                 background-color: rgba(32, 51, 114, 0.692);
                 bottom: 0;
