--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ header {
         background-image: url("../images/bootstrap_project.jpg");
         background-position: top; }
       .sect-projects .resp-project-container .resp-project-min .resp-photo-cell .area-photo-5 {
-        background-image: url("../images/rock-paper-scissors.png"); }
+        background-image: url("../images/rock-paper-scissors.jpg"); }
       .sect-projects .resp-project-container .resp-project-min .resp-photo-cell .resp-photo-layer {
         background-color: rgba(32, 51, 114, 0.692);
         bottom: 0;
@@ -378,7 +378,7 @@ header {
                 background-image: url("../images/bootstrap_project.jpg");
                 background-position: top; }
               .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .area-photo-5 {
-                background-image: url("../images/rock-paper-scissors.png"); }
+                background-image: url("../images/rock-paper-scissors.jpg"); }
               .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .photo-layer {
                 background-color: rgba(32, 51, 114, 0.692);
                 bottom: 0;
