--- a/sass/style.scss
+++ b/sass/style.scss
@@ -455,7 +455,7 @@ header {
                     background-position: top;
                 }
                 .area-photo-5 { 
-                    background-image: url('../images/rock-paper-scissors.png');
+                    background-image: url('../images/rock-paper-scissors.jpg');
                 } 
                 .resp-photo-layer {
                     background-color: $projectsPhotoLayerColor;
@@ -563,7 +563,7 @@ header {
                                 background-position: top;
                             }
                             .area-photo-5 { 
-                                background-image: url('../images/rock-paper-scissors.png');
+                                background-image: url('../images/rock-paper-scissors.jpg');
                             } 
                             .photo-layer {
                                 background-color: $projectsPhotoLayerColor;
