update project section

--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,8 @@ header {
         background-image: url("../images/rock-paper-scissors.jpg"); }
       .sect-projects .resp-project-container .resp-project-min .resp-photo-cell .area-photo-6 {
         background-image: url("../images/dice_generator.jpg"); }
+      .sect-projects .resp-project-container .resp-project-min .resp-photo-cell .area-photo-8 {
+        background-image: url("../images/portfolio.jpg"); }
       .sect-projects .resp-project-container .resp-project-min .resp-photo-cell .resp-photo-layer {
         background-color: rgba(32, 51, 114, 0.692);
         bottom: 0;
@@ -384,6 +386,9 @@ header {
                 background-image: url("../images/rock-paper-scissors.jpg"); }
               .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .area-photo-6 {
                 background-image: url("../images/dice_generator.jpg"); }
+              .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .area-photo-8 {
+                background-image: url("../images/portfolio.jpg");
+                background-position: top; }
               .sect-projects .project-container .left-side .list-left-side .cell .project-min .photo-cell .photo-layer {
                 background-color: rgba(32, 51, 114, 0.692);
                 bottom: 0;
