--- a/sass/style.scss
+++ b/sass/style.scss
@@ -461,6 +461,10 @@ header {
                 .area-photo-6 {
                     background-image: url('../images/dice_generator.jpg');
                 }
+                .area-photo-7 {
+                    background-image: url('../images/gibbetgame.jpeg');
+                    background-position: top; 
+                }
                 .area-photo-8 {
                     background-image: url('../images/portfolio.jpg'); 
                 }
@@ -575,6 +579,10 @@ header {
                             .area-photo-6 { 
                                 background-image: url('../images/dice_generator.jpg'); 
                             } 
+                            .area-photo-7 {
+                                background-image: url('../images/gibbetgame.jpeg');
+                                background-position: top; 
+                            }
                             .area-photo-8 {
                                 background-image: url('../images/portfolio.jpg'); 
                                 background-position: top;
